server.tests: Fix resource leak warnings by using try-with-resource
Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>